# lightspeed-stack

./: .cherry_picker.toml  .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  Makefile  README.md  alembic.ini  artifacts.lock.yaml  build-args-konflux.conf  docker-compose-library.yaml  docker-compose.yaml  example-llama-stack.yaml  lightspeed-config.yaml  lightspeed-stack.yaml  lightspeed-stack.yaml.backup  mkdocs.yml  pyproject.toml  renovate.json  requirements-build.txt  requirements.aarch64.txt  requirements.binary.txt  requirements.hashes.source.txt  requirements.hashes.wheel.txt  requirements.hermetic.txt  requirements.overrides.txt  requirements.txt  requirements.x86_64.txt  rpms.in.yaml  rpms.lock.yaml  run.yaml  server.py  test.containerfile
.github/: pr-title-checker-config.json
.konflux/: artifacts.lock.yaml  build-args-konflux.conf  profiles.toml  pypi_wheel_only.txt  requirements-build.txt  requirements.hashes.source.txt  requirements.hashes.wheel.pypi.txt  requirements.hashes.wheel.txt  requirements.hermetic.txt  requirements.overrides.txt  rpms.in.yaml  rpms.lock.yaml  ubi.repo
.tekton/: lightspeed-stack-0-5-pull-request.yaml  lightspeed-stack-0-5-push.yaml  lightspeed-stack-0-6-pull-request.yaml  lightspeed-stack-0-6-push.yaml  lightspeed-stack-0-7-pull-request.yaml  lightspeed-stack-0-7-push.yaml  lightspeed-stack-05-pull-request.yaml  lightspeed-stack-05-push.yaml  lightspeed-stack-pull-request.yaml  lightspeed-stack-push.yaml  lightspeed-stack-release-0-5-pull-request.yaml  lightspeed-stack-release-0-5-push.yaml  lightspeed-stack-test-pavel-pull-request.yaml  lightspeed-stack-test-pavel-push.yaml
design-docs/: design-template.md
dev-tools/: fetch-jira.sh  file-jiras.sh  jira-common.sh  release-jiras.md
docs/: ARCHITECTURE.md  README.md  branching.md  byok_guide.md  config.html  config.json  config.md  config.puml  contributing_guide.md  conversations_api.md  deployment_guide.md  getting_started.md  goose-example-tool-merging.md  index.md  okp_guide.md  openapi.json  openapi.md  output.md  persistence.md  providers.md  rag_guide.md  release-organization.md  responses.md  splunk.md  testing.md  tls-security-profile.md  user_data_collection.md
examples/: azure-run.yaml  bedrock-run.yaml  lightspeed-stack-a2a-agents.yaml  lightspeed-stack-a2a-state-pg.yaml  lightspeed-stack-a2a-state-sqlite.yaml  lightspeed-stack-api-key-auth.yaml  lightspeed-stack-azure-entraid-lib.yaml  lightspeed-stack-azure-entraid-service.yaml  lightspeed-stack-byok-okp-rag.yaml  lightspeed-stack-byok-rag.yaml  lightspeed-stack-conversation-cache-pg.yaml  lightspeed-stack-conversation-cache-sqlite.yaml  lightspeed-stack-lls-external.yaml  lightspeed-stack-lls-library.yaml  lightspeed-stack-mcp-servers.yaml  lightspeed-stack-ollama.yaml  ollama-run.yaml  run.yaml  (+13 more)
(+947 files in other folders)
