[project]
name = "lightspeed-stack"
dynamic = ["version"]
description = "LLM tooling stack"
authors = []
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.3",
    "kubernetes>=30.1.0",
    "llama-stack>=0.2.13",
    "rich>=14.0.0",
    "cachetools>=6.1.0",
    "prometheus-client>=0.22.1",
    "starlette>=0.47.1",
    "aiohttp>=3.12.14",
    "authlib>=1.6.0",
    # To check llama-stack API provider dependecies:
    #
    #    $ uv run llama stack list-providers
    #
    # API agents: inline::lightspeed_inline_agent
    "lightspeed-stack-providers~=0.1.9",
    # API inference: remote::vllm
    "openai",
    # API vector_io: inline::faiss
    "faiss-cpu~=1.11.0",
    # API datasetio: inline::localfs
    "sqlalchemy~=2.0.41",
    "aiosqlite~=0.21.0",
    # API telemetry: inline::meta-reference
    "opentelemetry-api~=1.34.1",
    "opentelemetry-exporter-otlp~=1.34.1",
    # API tool_runtime: inline::rag-runtime
    "transformers>=4.34.0",
    "numpy==2.2.6",
    # API tool_runtime: remote::model-context-protocol
    "mcp~=1.9.4",
]

# PyTorch has multiple wheel variants for different backends - cpu, gpu, etc.
# By default on pypi.org is the gpu variant. Forces uv to use the cpu variant.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[tool.pyright]
exclude = [
  # TODO(lucasagomes): This module was copied from road-core
  # service/ols/src/auth/k8s.py and currently has 58 Pyright issues. It
  # might need to be rewritten down the line.
  "src/auth/k8s.py",
]
extraPaths = ["./src"]

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/version.py"

[project.urls]
Homepage = "https://github.com/lightspeed-core/lightspeed-stack"
Issues = "https://github.com/lightspeed-core/lightspeed-stack/issues"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=1.0.0",
    "pyright>=1.1.401",
    "pylint>=3.3.7",
    "pydocstyle>=6.3.0",
    "mypy>=1.16.0",
    "types-PyYAML>=6.0.2",
    "types-requests>=2.28.0",
    "ruff>=0.11.13",
    "aiosqlite",
    "behave>=1.2.6",
    "types-cachetools>=6.1.0.20250717",
]
build = [
    "build>=1.2.2.post1",
    "twine>=5.1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
    "src"
]
addopts = [
    "--import-mode=importlib",
]

[tool.pylint.main]
source-roots = "src"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pylint."MESSAGES CONTROL"]
disable = ["R0801"]
